# android_asan_test

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/asan/: copy.py
app/asan/r19c/lib/armeabi-v7a/: wrap.sh
app/src/androidTest/java/com/jean/android_asan_test/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-code.cpp
app/src/main/java/com/jean/android_asan_test/: NativeHelper.java  ScrollingActivity.kt
app/src/main/res/layout/: content_scrolling.xml
app/src/main/res/menu/: menu_scrolling.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/jean/android_asan_test/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
